# cybercolors_bot

./: .dockerignore  .gitignore  .space.kts  .teamcity.cybercolors.yml  README.md  basevariables.py  bot_run.sh  github_api.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
api/: api_main.py
chat_bot/: create_response.py  message_processing.py  openai_main.py
cogs/: birthdays.py
docker/: Dockerfile  Dockerfile.embeddings  Dockerfile.indexer  Dockerfile.worker
docs/: moderation-rules-style-guide.md  session-conventions.md
logs_setup/: logger.py
misc_files/: basevariables.py  blocking_script.py  github_api.py
modal_apps/: youtube_transcription.py
scripts/: fix_juniper_moderator_attribution.py  import_historical_activity.py  import_juniper_warns.py  run_ai_knowledge_worker.py  run_youtube_channel_worker.py
tests/: db_helpers.py  test_action_autocomplete.py  test_action_log_controls.py  test_activity_excluded_channels.py  test_ai_answer_logging.py  test_ai_discord_media.py  test_ai_knowledge.py  test_ai_moderation_api.py  test_ai_moderation_review.py  test_ai_module.py  test_ai_provider.py  test_ai_settings.py  test_app_command_errors.py  test_birthdays.py  test_bot_messages.py  test_bot_moderation_services.py  test_bot_rbac.py  test_chat_bot_response.py  test_command_sync.py  test_dashboard_sessions.py  test_deleted_attachments_api.py  test_discord_command_metadata.py  test_discord_command_visibility.py  test_discord_guilds.py  test_duration_helpers.py  test_embedding_service.py  test_evidence_storage.py  test_member_join.py  (+28 more)
(+322 files in other folders)
